--- a/afs/templates/views/components/reports/scenes/communication.htm
+++ b/afs/templates/views/components/reports/scenes/communication.htm
@@ -37,7 +37,7 @@
                                         <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards.contactPoints)}">
                                             <i class="fa fa-mail-reply"></i>
                                         </a>
-                                        <a data-bind="click: function() {$parent.deleteTile(tileid, $parent.cards.contactPoints)}">
+                                        <a data-bind="click: $parent.deleteTile.bind($data, tileid, $parent.cards.contactPoints)">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
