--- a/afs/templates/views/components/reports/scenes/description.htm
+++ b/afs/templates/views/components/reports/scenes/description.htm
@@ -39,7 +39,7 @@
                                         <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.statement)}">
                                             <i class="fa fa-mail-reply"></i>
                                         </a>
-                                        <a data-bind="click: function() {$parent.delete(tileid, $parent.cards.statement)}">
+                                        <a data-bind="click: $parent.delete.bind($data, tileid, $parent.cards.statement)">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
