--- a/afs/templates/views/components/reports/scenes/documentation.htm
+++ b/afs/templates/views/components/reports/scenes/documentation.htm
@@ -62,7 +62,7 @@
                                         <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.digitalReference)}">
                                             <i class="fa fa-mail-reply"></i>
                                         </a>
-                                        <a data-bind="click: function() {$parent.delete(tileid, $parent.cards.digitalReference)}">
+                                        <a data-bind="click: $parent.delete.bind($data, tileid, $parent.cards.digitalReference)">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
