--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -87,7 +87,7 @@
                                                     <a data-bind="click: function() {$parent.editTile(tileid, eventData.cards.name)}">
                                                         <i class="fa fa-mail-reply"></i>
                                                     </a>
-                                                    <a data-bind="click: function() {$parent.deleteTile(tileid, eventData.cards.name)}">
+                                                    <a data-bind="click: $parent.deleteTile.bind($data, tileid, eventData.cards.name)">
                                                         <i class="fa fa-trash"></i>
                                                     </a>
                                                 </div>
@@ -135,7 +135,7 @@
                                                     <a data-bind="click: function() {$parent.editTile(tileid, eventData.cards.statement)}">
                                                         <i class="fa fa-mail-reply"></i>
                                                     </a>
-                                                    <a data-bind="click: function() {$parent.deleteTile(tileid, eventData.cards.statement)}">
+                                                    <a data-bind="click:$parent.deleteTile.bind($data, tileid, eventData.cards.statement)">
                                                         <i class="fa fa-trash"></i>
                                                     </a>
                                                 </div>
@@ -179,7 +179,7 @@
                                                     <a data-bind="click: function() {$parent.editTile(tileid, eventData.cards.identifier)}">
                                                         <i class="fa fa-mail-reply"></i>
                                                     </a>
-                                                    <a data-bind="click: function() {$parent.deleteTile(tileid, eventData.cards.identifier)}">
+                                                    <a data-bind="click: $parent.deleteTile.bind($data, tileid, eventData.cards.identifier)">
                                                         <i class="fa fa-trash"></i>
                                                     </a>
                                                 </div>
@@ -301,7 +301,7 @@
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.name)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
-                                                                <a data-bind="click: function() {$parents[1].deleteTile(tileid, $parent.cards.name)}">
+                                                                <a data-bind="click: $parents[1].deleteTile.bind($data, tileid, $parent.cards.name)">
                                                                     <i class="fa fa-trash"></i>
                                                                 </a>
                                                             </div>
@@ -348,7 +348,7 @@
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.statement)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
-                                                                <a data-bind="click: function() {$parents[1].deleteTile(tileid, $parent.cards.statement)}">
+                                                                <a data-bind="click: $parents[1].deleteTile.bind($data, tileid, $parent.cards.statement)">
                                                                     <i class="fa fa-trash"></i>
                                                                 </a>
                                                             </div>
@@ -392,7 +392,7 @@
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.identifier)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
-                                                                <a data-bind="click: function() {$parents[1].deleteTile(tileid, $parent.cards.identifier)}">
+                                                                <a data-bind="click: $parents[1].deleteTile.bind($data, tileid, $parent.cards.identifier)">
                                                                     <i class="fa fa-trash"></i>
                                                                 </a>
                                                             </div>
