set keyvalue to inline

--- a/afs/templates/views/components/reports/scenes/default.htm
+++ b/afs/templates/views/components/reports/scenes/default.htm
@@ -21,6 +21,7 @@
                             name: 'views/components/reports/scenes/keyvalue',
                             params: {
                                 data: item,
+                                inline: true
                             }
                         }"></div>
                          
