--- a/afs/templates/views/components/reports/scenes/substance.htm
+++ b/afs/templates/views/components/reports/scenes/substance.htm
@@ -79,7 +79,8 @@
                         <div class="afs-keyvalue" data-bind="component: {
                             name: 'views/components/reports/scenes/keyvalue',
                             params: {
-                                data: item
+                                data: item,
+                                inline: true
                             }
                         }"></div>
                     </div>
