--- a/afs/templates/views/components/reports/scenes/annotation-parts.htm
+++ b/afs/templates/views/components/reports/scenes/annotation-parts.htm
@@ -34,7 +34,7 @@
                             <a style="display:inline" data-bind="click: function() {editTile(part.tileId, annotation.card)}">
                                 <i style="display:inline" class="fa fa-mail-reply"></i>
                             </a>
-                            <a style="display:inline" data-bind="click: function() {deleteTile(part.tileId, annotation.card)}">
+                            <a style="display:inline" data-bind="click: $parent.deleteTile.bind($data, part.tileId, annotation.card)">
                                 <i style="display:inline" class="fa fa-trash"></i>
                             </a>
                         </div>
