Make the annotation info an obsevable, #829

--- a/afs/templates/views/components/reports/scenes/annotation-parts.htm
+++ b/afs/templates/views/components/reports/scenes/annotation-parts.htm
@@ -49,7 +49,7 @@
     </table>
     <div class="final-step-section-block-item" style="margin-bottom: 60px;">
         <div class="block-item files-metadata">
-            <div class="afs-summary-value" data-bind='text: "{% trans 'Regions of Interest: ' %}" + annotation.info.length'></div>
+            <div class="afs-summary-value" data-bind='text: "{% trans 'Regions of Interest: ' %}" + annotation.info().length'></div>
         </div>
     </div>
 <div>
