--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -238,7 +238,7 @@
             <div data-bind="if: eventData.parts" class="afs-report-subsection">
                 <i data-bind="click: function() {toggleVisibility(visible[eventName].parts)}, css: {'fa-angle-double-right': visible[eventName].parts(), 'fa-angle-double-up': !visible[eventName].parts()}" class="fa toggle"></i>
                 <h2 class="afs-report-section-subtitle">{% trans "Event Parts" %}</h2>
-                <a data-bind="if: cards[eventName].parts, click: function(){addNewTile(cards[eventName].parts)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Add Part" %}</a>
+                <a data-bind="if: cards[eventName] && cards[eventName].parts, click: function(){addNewTile(cards[eventName].parts)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Add Part" %}</a>
                 <div data-bind="if: visible[eventName].parts">
                 <!-- ko ifnot: eventData.parts().length -->
                 <div class="afs-nodata-note afs-top-card">No parts for this event</div>
@@ -250,7 +250,7 @@
                     <div>
                         <h3><i data-bind="click: function(){$parent.toggleVisibility(visible)}" class="fa fa-angle-double-right"></i> {% trans "Event Part " %}<span data-bind="if: title">:</span> <span data-bind="text: title"></span></h3>
                         <div class="afs-part-expanded" data-bind="visible: visible">
-                            <a data-bind="if: eventData.cards.part, click: function(){$parent.editTile(tileid, eventData.cards.part)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Part" %}</a>
+                            <a data-bind="if: eventData.cards && eventData.cards.part, click: function(){$parent.editTile(tileid, eventData.cards.part)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Part" %}</a>
             
                             <div class="afs-report-event-section afs-report-collapsible-container">
                                 <div class="afs-report-subsection-container">
@@ -296,7 +296,7 @@
                                                         <td data-bind="text: type"></td>
                                                         <td data-bind="text: language"></td>
                                                         <td class="afs-table-control">
-                                                            <div data-bind="if: $parent.cards.name && $parent.cards.name.tiles().length">
+                                                            <div data-bind="if: $parent.cards && $parent.cards.name && $parent.cards.name.tiles().length">
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.name)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
@@ -343,7 +343,7 @@
                                                         <td data-bind="text: language"></td>
                                                         <td data-bind="text: name"></td>
                                                         <td class="afs-table-control">
-                                                            <div data-bind="if: $parent.cards.statement && $parent.cards.statement.tiles().length">
+                                                            <div data-bind="if: $parent.cards && $parent.cards.statement && $parent.cards.statement.tiles().length">
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.statement)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
@@ -387,7 +387,7 @@
                                                         <td data-bind="text: name"></td>
                                                         <td data-bind="text: type"></td>
                                                         <td class="afs-table-control">
-                                                            <div data-bind="if: $parent.cards.identifier && $parent.cards.identifier.tiles().length">
+                                                            <div data-bind="if: $parent.cards && $parent.cards.identifier && $parent.cards.identifier.tiles().length">
                                                                 <a data-bind="click: function() {$parents[1].editTile(tileid, $parent.cards.identifier)}">
                                                                     <i class="fa fa-mail-reply"></i>
                                                                 </a>
