--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -2,19 +2,10 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
+        <h5 class="summary-value">{% trans 'Object of Analysis' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.projectName.name + ':'"></div>
-                    <a data-bind="attr: { href: urls.resource + '/' + reportVals.projectName.resourceid}" target="_blank">
-                        <div class="summary-value" 
-                            data-bind = "text: reportVals.projectName.value">
-                        </div>
-                    </a>
-                </div>
-                <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.parentObject.name + ':'"></div>
                     <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
                         <div class="summary-value" 
                             data-bind = "text: displayName">
@@ -42,6 +33,13 @@
 
     <div class="afs-final-step-section">
         <h5 class="summary-value">{% trans 'Region(s) of Interest' %}</h5>
+        <!-- ko foreach: {data: objectAnnotations, as: 'annotation'} -->
+        <div style="margin-bottom: 40px;" data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
+        <!-- /ko -->
+    </div>
+
+    <div class="afs-final-step-section">
+        <h5 class="summary-value">{% trans 'Digital Resources' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
@@ -50,12 +48,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="afs-final-step-section">
-        <!-- ko foreach: {data: objectAnnotations, as: 'annotation'} -->
-        <div style="margin: -20px 0px 60px 0px;" data-bind="component: { name: 'views/components/annotation-summary', params: {annotation: annotation}}"></div>
-        <!-- /ko -->
     </div>
 </div>
 <!-- /ko -->
