Specify the sampling motivations, #840

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -366,7 +366,7 @@
                         <!-- END sample description -->
 
                         <!-- BEGIN motivation for sampling -->
-                            <h5 class="analysis-areas-annotation-step-widget-title">{% trans 'Motivation for Sampling' %}</h5>
+                            <h5 class="analysis-areas-annotation-step-widget-title">{% trans 'Motivation for sampling this <strong>sample</strong>' %}</h5>
 
                             <div class="afs-workflow-sample-desc" style="margin-left: -21px; margin-top: -18px;"
                                 data-bind='
