--- a/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div style="height: 100%; padding: 10px 24px;">
     <div style="padding: 5px">
-        <div class="widget-input-label">Samplers</div>
+        <div class="widget-input-label">{% trans "Samplers" %}</div>
         <div data-bind="component: {
             name: 'resource-instance-multiselect-widget',
             params: {
@@ -14,7 +14,7 @@
         }"></div>
     </div>
     <div style="padding: 5px; margin-top: 25px;">
-        <div class="widget-input-label">Sampling Date</div>
+        <div class="widget-input-label">{% trans "Sampling Date" %}</div>
         <div style="margin: -25px 0px 0px 0px;" data-bind="component: {
             name: 'datepicker-widget',
             params: {
@@ -25,7 +25,7 @@
         }"></div>
     </div>
     <div style="padding: 5px">
-        <div class="widget-input-label">Sampling Motivation</div>
+        <div class="widget-input-label">{% trans "Sampling Motivation (The motivation for the whole current <strong>sampling activity</strong>)" %}</div>
         <div style="margin: -25px 0px 10px 0px;" data-bind="component: {
             name: 'rich-text-widget',
             params: {
@@ -35,7 +35,7 @@
         }"></div>
     </div>
     <div style="padding: 5px">
-        <div class="widget-input-label">Sampling Technique</div>
+        <div class="widget-input-label">{% trans "Sampling Technique" %}</div>
         <div style="margin: -25px 0px 10px 0px;" data-bind="component: {
             name: 'rich-text-widget',
             params: {
@@ -47,7 +47,7 @@
     <div class="afs-experiment-name-block">
         <div class="afs-experiment-name" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide experiment name' : 'Show experiment name'"></div>
         <div data-bind="visible: showName">
-            <div class="widget-input-label">Sampling Activity Name</div>
+            <div class="widget-input-label">{% trans "Sampling Activity Name" %}</div>
             <div style="margin: -10px -5px;" data-bind="component: {
                 name: 'text-widget',
                 params: {
