Minor string edits, re #840

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -25,7 +25,7 @@
         }"></div>
     </div>
     <div style="padding: 5px">
-        <div class="widget-input-label">{% trans "Sampling Motivation (The motivation for the whole current <strong>sampling activity</strong>)" %}</div>
+        <div class="widget-input-label">{% trans "Sampling Motivation (applies to this entire <strong>sampling activity</strong>)" %}</div>
         <div style="margin: -25px 0px 10px 0px;" data-bind="component: {
             name: 'rich-text-widget',
             params: {
