--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -763,11 +763,11 @@
     padding-left: 0px;
 }
 
-.workflow-component-element .afs-workflow-second-component {
+.create-project-project-name-step > div:not(:first-child) {
     margin-top: -60px;
 }
 
-.workflow-component-element .afs-workflow-second-component .widget-input-label{
+.create-project-project-name-step .widget-input-label{
     padding-left: 0px;
 }
 
