--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -94,7 +94,9 @@
                                                     var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
                                                     return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
                                                 })()"
+                                                style="width: 100%"
                                             ></td>
+                                            <td data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i class="fa fa-lock"></i></td>
                                         </tr>
                                     <!-- /ko -->
                                 </tbody>
