--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -19,10 +19,11 @@
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
             params: {
+                searchString: procedureSearchString,
                 graphids: [
                     'a7b1a7c5-b25b-11e9-8a4e-a4d18cec433a',
                 ],
-                renderContext: 'workflow', 
+                renderContext: 'workflow',
                 value: procedureValue,
                 disabled: locked
             }
