--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -15,6 +15,8 @@
 {% endblock tabs %}
 
 {% block sidepanel %}
+<div class="afs-saving-message" data-bind="visible: savingFile, text: savingMessage"></div>
+
 <!--ko foreach: { data: [$data], as: 'self' }-->
 <!--ko if: activeTab() === 'dataset'-->
 <div class="workbench-header-buffer">
