--- a/afs/templates/views/components/workflows/create-project-workflow/project-name-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/project-name-step.htm
@@ -1,8 +1,8 @@
 {% load i18n %}
-<div class="afs-project-workflow">
-    <div style="margin-bottom: 5px;">
+<div>
+    <div style="padding: 35px 60px 0px;">
         <div class="widget-input-label">Project Name*</div>
-        <div data-bind="component: {
+        <div style="margin-top: -20px;" data-bind="component: {
             name: 'text-widget',
             params: {
                 renderContext: 'workflow', 
@@ -11,9 +11,9 @@
         }"></div>
         </div>
     </div>
-    <div>
-        <div class="widget-input-label" style="margin-bottom: 5px;">Project Activity Type</div>
-        <div data-bind="component: {
+    <div style="padding: 25px 60px 0px;">
+        <div class="widget-input-label">Project Activity Type</div>
+        <div style="margin-top: -20px;" data-bind="component: {
             name: 'concept-multiselect-widget',
             params: {
                 node: {config: {rdmCollection: '3a8e8388-0bb9-42f2-bc77-fc5a1c640589'}},
