--- a/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -59,7 +59,7 @@
         }"></div>
     </div>
     <div class="afs-experiment-name-block">
-        <div class="afs-experiment-name" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide experiment name' : 'Show experiment name'"></div>
+        <div class="afs-experiment-name" data-bind="click: function(){showName(!showName())}, text: showName() ? 'Hide sampling activity name' : 'Show sampling activity name'"></div>
         <div data-bind="visible: showName">
             <div class="widget-input-label">{% trans "Sampling Activity Name" %}</div>
             <div style="margin: -10px -5px;" data-bind="component: {
