changes for #8177 in arches core - split panel hiding in manifest manager workflow context

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -59,6 +59,7 @@
                 summary: true,
                 shouldShowEditService: $data.shouldShowEditService,
                 manifestData: manifestData,
+                renderContext: 'manifest-workflow'
             }
         }
     "
