--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -55,6 +55,7 @@
                 summary: true,
                 shouldShowEditService: $data.shouldShowEditService,
                 manifestData: manifestData,
+                renderContext: 'manifest-workflow'
             }
         }
     "
